// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`K3d Component Configuration Structure should generate correct YAML structure 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

apiVersion: k3d.io/v1alpha5
kind: Simple
metadata:
  name: structure-test-cluster
servers: 2
agents: 1
network: test-network
image: docker.io/rancher/k3s:v1.30.8-k3s1
ports:
  - port: 8080:80
    nodeFilters:
      - loadbalancer
options:
  k3s:
    extraArgs:
      - arg: --disable=traefik
        nodeFilters:
          - server:*
      - arg: --disable=metrics-server
        nodeFilters:
          - server:*
  kubeconfig:
    updateDefaultKubeconfig: true
"
`;

exports[`K3d Component Custom Configuration should combine default and custom k3s extra args 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

apiVersion: k3d.io/v1alpha5
kind: Simple
metadata:
  name: combined-args-cluster
servers: 1
agents: 0
network: k3s
image: docker.io/rancher/k3s:v1.30.8-k3s1
ports:
  - port: 8080:80
    nodeFilters:
      - loadbalancer
options:
  k3s:
    extraArgs:
      - arg: --disable=traefik
        nodeFilters:
          - server:*
      - arg: --disable=metrics-server
        nodeFilters:
          - server:*
  kubeconfig:
    updateDefaultKubeconfig: true
"
`;

exports[`K3d Component Custom Configuration should handle custom k3s extra args 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

apiVersion: k3d.io/v1alpha5
kind: Simple
metadata:
  name: custom-args-cluster
servers: 1
agents: 0
network: k3s
image: docker.io/rancher/k3s:v1.30.8-k3s1
ports:
  - port: 8080:80
    nodeFilters:
      - loadbalancer
options:
  k3s:
    extraArgs:
      - arg: --disable=traefik
        nodeFilters:
          - server:*
      - arg: --disable=metrics-server
        nodeFilters:
          - server:*
  kubeconfig:
    updateDefaultKubeconfig: true
"
`;

exports[`K3d Component Custom Configuration should handle custom load balancer port 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

apiVersion: k3d.io/v1alpha5
kind: Simple
metadata:
  name: custom-port-cluster
servers: 1
agents: 0
network: k3s
image: docker.io/rancher/k3s:v1.30.8-k3s1
ports:
  - port: 8080:80
    nodeFilters:
      - loadbalancer
options:
  k3s:
    extraArgs:
      - arg: --disable=traefik
        nodeFilters:
          - server:*
      - arg: --disable=metrics-server
        nodeFilters:
          - server:*
  kubeconfig:
    updateDefaultKubeconfig: true
"
`;

exports[`K3d Component Custom Configuration should handle custom network name 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

apiVersion: k3d.io/v1alpha5
kind: Simple
metadata:
  name: custom-network-cluster
servers: 1
agents: 0
network: custom-net
image: docker.io/rancher/k3s:v1.30.8-k3s1
ports:
  - port: 8080:80
    nodeFilters:
      - loadbalancer
options:
  k3s:
    extraArgs:
      - arg: --disable=traefik
        nodeFilters:
          - server:*
      - arg: --disable=metrics-server
        nodeFilters:
          - server:*
  kubeconfig:
    updateDefaultKubeconfig: true
"
`;

exports[`K3d Component Custom Configuration should handle custom server and agent counts 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

apiVersion: k3d.io/v1alpha5
kind: Simple
metadata:
  name: custom-cluster
servers: 3
agents: 2
network: k3s
image: docker.io/rancher/k3s:v1.30.8-k3s1
ports:
  - port: 8080:80
    nodeFilters:
      - loadbalancer
options:
  k3s:
    extraArgs:
      - arg: --disable=traefik
        nodeFilters:
          - server:*
      - arg: --disable=metrics-server
        nodeFilters:
          - server:*
  kubeconfig:
    updateDefaultKubeconfig: true
"
`;

exports[`K3d Component Custom Configuration should handle updateDefaultKubeconfig set to false 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

apiVersion: k3d.io/v1alpha5
kind: Simple
metadata:
  name: no-kubeconfig-cluster
servers: 1
agents: 0
network: k3s
image: docker.io/rancher/k3s:v1.30.8-k3s1
ports:
  - port: 8080:80
    nodeFilters:
      - loadbalancer
options:
  k3s:
    extraArgs:
      - arg: --disable=traefik
        nodeFilters:
          - server:*
      - arg: --disable=metrics-server
        nodeFilters:
          - server:*
  kubeconfig:
    updateDefaultKubeconfig: true
"
`;

exports[`K3d Component Default Configuration should create k3d component with minimal configuration 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

apiVersion: k3d.io/v1alpha5
kind: Simple
metadata:
  name: test-cluster
servers: 1
agents: 0
network: k3s
image: docker.io/rancher/k3s:v1.30.8-k3s1
ports:
  - port: 8080:80
    nodeFilters:
      - loadbalancer
options:
  k3s:
    extraArgs:
      - arg: --disable=traefik
        nodeFilters:
          - server:*
      - arg: --disable=metrics-server
        nodeFilters:
          - server:*
  kubeconfig:
    updateDefaultKubeconfig: true
"
`;

exports[`K3d Component Default Configuration should create k3d component with minimal configuration 2`] = `"npx projen k3d:create"`;

exports[`K3d Component Default Configuration should create k3d component with minimal configuration 3`] = `"npx projen k3d:stop"`;

exports[`K3d Component Default Configuration should create k3d component with minimal configuration 4`] = `"npx projen k3d:start"`;

exports[`K3d Component Default Configuration should create k3d component with minimal configuration 5`] = `"npx projen k3d:delete"`;
